UPDATE clean css, add better styling, more casestudy content

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -32,24 +32,69 @@ html(dir='ltr' lang='en' class='no-js')
           p.
             #[strong Previously:]
           p.
+            #[a(href='https://www.synerghetic.net/' target='_blank') Synerg'hetic]: Vice-Treasurer & Web Developer - Junior-Enterprise - 1 year (2017-2018) #[button(data-casestudy='synerghetic') → read more]
+          p.
             #[a(href='https://cinemur.fr/' target='_blank') CINÉMUR]: Web Developer - Internship - 4 months (2017)  #[button(data-casestudy='cinemur') → read more]
           p.
-            #[a(href='https://www.synerghetic.net/' target='_blank') Synerg'hetic]: Vice-Treasurer & ISD - Junior-Company - 1 year (2017-2018) #[button(data-casestudy='synerghetic') → read more]
+            #[a(href='https://pureemaison.com/' target='_blank') Purée Maison]: Web Developer - internship - 3 months (2016) #[button(data-casestudy='pureemaison') → read more]
 
       aside.casestudies
-        button #[p back] #[div] #[div]
+        button(data-casestudy='synerghetic') ← back
+
+        article.casestudy__item#synerghetic
+          div.conversation__bubble.conversation__bubble--general
+            <svg xmlns="http://www.w3.org/2000/svg" width="77" height="50" style="display:block;margin:auto;" viewBox="0 0 37 24" data-v-314f53c6=""><path fill="#490C66" fill-rule="evenodd" d="M13.74 11.77a12 12 0 0 1 .83-4.12 5.58 5.58 0 0 1-.9 9.25 5.48 5.48 0 0 1-8.01-5.1l2.98-.01a2.59 2.59 0 0 0 2.58 2.5 2.6 2.6 0 0 0 2.52-2.52zm4.43 3.62a7.79 7.79 0 0 0 2.18 2.54 10.58 10.58 0 0 1-9.13 5.14A11.26 11.26 0 0 1 0 11.81h3.34a7.9 7.9 0 0 0 .87 3.8 7.78 7.78 0 0 0 13.96-.22zM22.5 6.7a5.48 5.48 0 0 1 8.02 5.02h-3.04c-.01-1.41-1.2-2.7-2.61-2.62-2.18.12-2.43 2.05-2.5 2.64a14.7 14.7 0 0 1-.96 4.06 5.58 5.58 0 0 1 1.09-9.1zM24.9.44A11.26 11.26 0 0 1 36.11 11.7l-3.29.01a7.89 7.89 0 0 0-.87-3.7 7.78 7.78 0 0 0-13.95.2 7.8 7.8 0 0 0-2.35-2.67 11.02 11.02 0 0 1 9.24-5.1z" data-v-314f53c6=""></path></svg>
+            h2 #[strong Synerg'hetic]
+            p.
+              Synerg'hetic is one the best four French Junior-Enterprises since 2017. It's a student association.
+              For one year I was Synerg'hetic's Vice-treasurer and Web Developer, and was part of a team of eleven students in charge of managing our Junior-Enterprise.
+
+            p.
+              Synerg'hetic in a few numbers:#[br]
+              - 150.000 € in turnover each year #[br]
+              - 325 different clients in 13 years #[br]
+              - 117 alumni #[br]
+              - 40% of clients are entrepreneurs or debuting startups
+            //- img(src="/images/synergfamily.jpg", alt="Synerg'hetic's 2017/18 team", data-action="zoom")
+
+          div.conversation__bubble.conversation__bubble--general
+            p.
+              As #[strong Vice-treasurer], I was in charge of:#[br]
+              - assisting the Treasurer in making and adjusting our budget throughout the year ;#[br]
+              - tending to the accounting ;#[br]
+              - monitor the payment of bills on due date.#[br]
+
+          div.conversation__bubble.conversation__bubble--general
+            p.
+              As #[strong Web Developer], I was in charge of monitoring, improving the many tools Synerg'hetic uses daily. I also developed new tools too!
+
+            p.
+              #[a(href='https://adhesion.synerghetic.net/' target='_blank') adhesion.synerghetic.net] #[br]
+              We designed a new online membership form (we previously did it all by paper and check) to facilitate our membership growth. We made this solution with a custom build of Wordpress and Stripe, allowing to distribute it easily between other Junior-Enterprises.
+            //- img(src="/images/synergfamily.jpg", alt="Synerg'hetic's 2017/18 team", data-action="zoom")
+
+            p.
+              #[a(href='https://synerghetic.pe/' target='_blank') synerghetic.pe] #[br]
+              On the road to becoming again one the best French Junior-Enterprises, we decided to create an original support for our roadmap: presenting the people who believed in Synerg'hetic and contributed to its excellence. It was built using Nuxt.js and is purely front-end.
+            //- img(src="/images/synergfamily.jpg", alt="Synerg'hetic's 2017/18 team", data-action="zoom")
+
+            p.
+              #[a(disabled) synergwiki] #[em private] #[br]
+              I pushed the initiative of creating a knowledge base where we could document every process our team was using during our one year mandate, so future generations could benefit easier on it. It's powered by Ghost, an open-source CMS project.
+            //- img(src="/images/synergfamily.jpg", alt="Synerg'hetic's 2017/18 team", data-action="zoom")
 
         article.casestudy__item#cinemur
           div.conversation__bubble.conversation__bubble--general
+            <svg xmlns="http://www.w3.org/2000/svg" width="46" height="50" viewBox="0 0 29 32" style="display:block;margin:auto;"><path fill="#FF5151" fill-rule="evenodd" d="M7.92 25.98c.06-.02.1-.08.1-.14v-1.39c0-.19.12-.36.3-.42l2.68-.95a.3.3 0 0 1 .41.28v4.35c0 .19-.11.36-.3.42L.85 31.96A.62.62 0 0 1 0 31.4V.6C0 .18.43-.1.84.04l10.28 3.82c.18.07.3.24.3.43v4.35a.3.3 0 0 1-.42.28l-2.67-.95a.45.45 0 0 1-.3-.42V6.1a.15.15 0 0 0-.1-.14L3.6 4.33a.15.15 0 0 0-.2.14v23.06c0 .1.1.18.2.14l4.32-1.69zM28.16.04c.4-.15.84.14.84.56v30.8c0 .42-.43.71-.84.56l-10.28-3.82a.45.45 0 0 1-.3-.43V15.67c0-.1-.1-.17-.2-.14l-2.77 1.03a.31.31 0 0 1-.22 0l-2.78-1.03a.3.3 0 0 1-.2-.28v-2.97a.3.3 0 0 1 .42-.29l2.62.98h.1l6.01-2.24a.3.3 0 0 1 .42.28v14.83c0 .06.04.12.1.14l4.31 1.69c.1.04.22-.03.22-.14V4.47c0-.1-.11-.18-.21-.14L18 7.13a.3.3 0 0 1-.41-.29V4.3c0-.19.11-.36.3-.42L28.15.04z"/></svg>
             h2 #[strong Cinemur]
             p.
               As an intern, I renovated the user profile, added the new 'collections' feature, and worked daily on the website's codebase.
 
-        article.casestudy__item#synerghetic
+        article.casestudy__item#pureemaison
           div.conversation__bubble.conversation__bubble--general
-            h2 #[strong Synerg'hetic]
+            h2 #[strong Purée Maison]
             p.
-              For one year I was Synerg'hetic's Vice-treasurer and Information Services Director. During this time I worked on many tools and platforms for my school's Junior-Company, such as an internal documentation or an online membership form.
+              I worked 3 months with Purée Maison as an intern. I worked
 
   script(src='js/app.min.js')
   script.
@@ -59,3 +104,4 @@ html(dir='ltr' lang='en' class='no-js')
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
     ga('create', 'UA-37038680-3', 'auto');
     ga('send', 'pageview');
+  script(src='https://cdn.jsdelivr.net/npm/zoom-vanilla.js/dist/zoom-vanilla.min.js')
