--- a/src/pug/includes/head.pug
+++ b/src/pug/includes/head.pug
@@ -13,3 +13,4 @@ head
   meta(name="theme-color", content="#ffffff")
   link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Merriweather:300,700')
   link(rel='stylesheet' href='css/main.css')
+  link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/zoom-vanilla.js/dist/zoom.css")
