--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,7 @@ body {
     width: 100%;
     height: 100%;
     scroll-behavior: smooth;
+    transition: .3s ease-out;
 }
 
 button {
@@ -72,11 +73,14 @@ a {
             width: 100%;
         }
     }
+    &[disabled] {
+        cursor: not-allowed;
+    }
 }
 
 button {
-    font-weight: 700;
     color: $teal;
+    background: $white;
     position: relative;
     padding: 0 10px;
     z-index: 1;
@@ -102,7 +106,84 @@ button {
     }
 }
 
-::selection {
-    background: $teal;
-    color: white;
+.synerghetic {
+    background: rgba($color: #490C66, $alpha: .3);
+    button {
+        color: #490C66;
+        &::after {
+            background: #490C66;
+        }
+        &:hover {
+            color: #FEFEFE;
+        }
+    }
+    svg {
+        margin-bottom: 20px;
+        transform: rotate(-180deg);
+        will-change: transform;
+        transition: .8s cubic-bezier(.66, -.87, .26, 1.57) .2s;
+        &:hover {
+            transform: rotate(0deg);
+        }
+    }
+    a {
+        color: #490C66;
+        &::after {
+            background: #490C66;
+        }
+    }
+}
+
+.pureemaison {
+    background: rgba($color: #f2c145, $alpha: .5);
+    button {
+        color: #f2c145;
+        &::after {
+            background: #f2c145;
+        }
+        &:hover {
+            color: #FEFEFE;
+        }
+    }
+    svg {
+        transform: rotate(-180deg);
+        will-change: transform;
+        transition: .8s cubic-bezier(.66, -.87, .26, 1.57) .2s;
+        &:hover {
+            transform: rotate(0deg);
+        }
+    }
+    a {
+        color: #f2c145;
+        &::after {
+            background: #f2c145;
+        }
+    }
+}
+
+.cinemur {
+    background: rgba($color: #FF5151, $alpha: .5);
+    button {
+        color: #FF5151;
+        &::after {
+            background: #FF5151;
+        }
+        &:hover {
+            color: #FEFEFE;
+        }
+    }
+    svg {
+        // transform: rotate(-180deg);
+        will-change: transform;
+        transition: .8s cubic-bezier(.66, -.87, .26, 1.57) .2s;
+        &:hover {
+            // transform: rotate(0deg);
+        }
+    }
+    a {
+        color: #FF5151;
+        &::after {
+            background: #FF5151;
+        }
+    }
 }
