--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,9 @@ body {
     height: 100%;
     scroll-behavior: smooth;
     transition: .3s ease-out;
+    .zoom-overlay {
+        background: #FEFEFE;
+    }
 }
 
 button {
@@ -145,12 +148,15 @@ button {
             color: #FEFEFE;
         }
     }
-    svg {
-        transform: rotate(-180deg);
+    img.pureemaison_logo {
+        display: block;
+        max-width: 75px;
+        margin: 0 auto;
+        transform: rotateX(0);
         will-change: transform;
-        transition: .8s cubic-bezier(.66, -.87, .26, 1.57) .2s;
+        transition: 1.2s cubic-bezier(.66, -.87, .26, 1.57) .2s;
         &:hover {
-            transform: rotate(0deg);
+            transform: rotateX(360deg);
         }
     }
     a {
@@ -173,11 +179,11 @@ button {
         }
     }
     svg {
-        // transform: rotate(-180deg);
+        transform: rotateY(-360deg);
         will-change: transform;
-        transition: .8s cubic-bezier(.66, -.87, .26, 1.57) .2s;
+        transition: 1.2s cubic-bezier(.66, -.87, .26, 1.57) .2s;
         &:hover {
-            // transform: rotate(0deg);
+            transform: rotateY(0deg);
         }
     }
     a {
