ADD pureemaison logo

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -92,9 +92,10 @@ html(dir='ltr' lang='en' class='no-js')
 
         article.casestudy__item#pureemaison
           div.conversation__bubble.conversation__bubble--general
+            img(src="/images/pureemaison.png", alt="Purée Maison", class="pureemaison_logo")
             h2 #[strong Purée Maison]
             p.
-              I worked 3 months with Purée Maison as an intern. I worked
+              I worked 3 months with Purée Maison as a web developer intern. I worked on multiple agency projects: e-commerce websites, corporate landing pages and creative experiences. I also took part in the creative process behind a marketing campaign for Mastercard.
 
   script(src='js/app.min.js')
   script.
