UDPATE case studies directory structure and synerghetic content

--- a/src/scss/_casestudy.scss
+++ b/src/scss/_casestudy.scss
@@ -33,4 +33,7 @@
 .conversation:not(.is-reading-casestudy)+.casestudies {
     opacity: 0;
     pointer-events: none;
+    >button {
+        opacity: 0;
+    }
 }
