UPDATE add back button at bottom of each casestudy

--- a/src/pug/casestudies/cinemur.pug
+++ b/src/pug/casestudies/cinemur.pug
@@ -4,3 +4,5 @@ article.casestudy__item#cinemur
     h2 #[strong Cinemur]
     p.
       As an intern, I renovated the user profile, added the new 'collections' feature, and worked daily on the website's codebase.
+
+  button ← back
