--- a/src/pug/casestudies/pureemaison.pug
+++ b/src/pug/casestudies/pureemaison.pug
@@ -5,3 +5,5 @@ article.casestudy__item#pureemaison
     p.
       I worked 3 months with Purée Maison as a web developer intern. I worked on multiple agency projects: e-commerce websites, corporate landing pages and creative experiences. I also took part in the creative process behind a marketing campaign for Mastercard.
     img(src="/images/pm_family.jpg", alt="Purée Maison class of '16", data-action="zoom")
+
+  button ← back
