--- a/src/pug/casestudies/synerghetic.pug
+++ b/src/pug/casestudies/synerghetic.pug
@@ -44,3 +44,5 @@ article.casestudy__item#synerghetic
     p.
       I also was the #[strong Community Manager of JIDF (#[a(href='https://juniors-idf.fr/' target='_blank') Juniors Ile-de-France]), a group of 24 Junior-Entreprises, for 6 months from December 2017 to May 2018]. I was responsible for managing JIDF's image on social networks, coordinating our events communication strategy. I took the opportunity to make high-quality graphical resources for everyone to use. Being part of a movement that large is super rewarding, as I had the opportunity to meet a lot of students from very different horizons.
     img(src="images/jidf.jpg", alt="my JIDF family", data-action="zoom")
+
+  button ← back
