--- a/src/scss/_casestudy.scss
+++ b/src/scss/_casestudy.scss
@@ -27,6 +27,9 @@
             visibility: visible;
             pointer-events: all;
         }
+        >button {
+            margin-bottom: 20px;
+        }
     }
 }
 
