--- a/src/pug/casestudies/pureemaison.pug
+++ b/src/pug/casestudies/pureemaison.pug
@@ -3,7 +3,7 @@ article.casestudy__item#pureemaison
     img(src="/images/pureemaison.png", alt="Purée Maison", class="pureemaison_logo")
     h2 #[strong Purée Maison]
     p.
-      I worked 3 months with Purée Maison as a web developer intern. I worked on multiple agency projects: e-commerce websites, corporate landing pages and creative experiences. I also took part in the creative process behind a marketing campaign for Mastercard.
+      I worked 3 months at Purée Maison as a web developer intern. I worked on multiple agency projects: e-commerce websites, corporate landing pages and creative experiences. I also took part in the creative process behind a marketing campaign for Mastercard.
     img(src="/images/pm_family.jpg", alt="Purée Maison class of '16", data-action="zoom")
 
   button ← back
