--- a/src/pug/casestudies/synerghetic.pug
+++ b/src/pug/casestudies/synerghetic.pug
@@ -31,10 +31,10 @@ article.casestudy__item#synerghetic
       #[a(href='https://adhesion.synerghetic.net/' target='_blank') adhesion.synerghetic.net] #[br]
       We designed a new online membership form (we previously did it all by paper and check) to facilitate our membership growth. We made this solution with a custom build of Wordpress and Stripe, allowing to distribute it easily between other Junior-Enterprises.
     img(src="/images/synergadhesion.png", alt="Synerg'hetic's online membership form", data-action="zoom")
-    p.
-      #[a(href='https://synerghetic.pe/' target='_blank') synerghetic.pe] #[br]
-      On the road to becoming again one the best French Junior-Enterprises, we decided to create an original support for our roadmap: presenting the people who believed in Synerg'hetic and contributed to its excellence. It was built using Nuxt.js and is purely front-end.
-    img(src="/images/synergheticpe.gif", alt="Synerghetic.pe animated homepage", data-action="zoom")
+    //- p.
+    //-   #[a(href='https://synerghetic.pe/' target='_blank') synerghetic.pe] #[br]
+    //-   On the road to becoming again one the best French Junior-Enterprises, we decided to create an original support for our roadmap: presenting the people who believed in Synerg'hetic and contributed to its excellence. It was built using Nuxt.js and is purely front-end.
+    //- img(src="/images/synergheticpe.gif", alt="Synerghetic.pe animated homepage", data-action="zoom")
     p.
       #[a(disabled) synergwiki] #[em private] #[br]
       I pushed the initiative of creating a knowledge base where we could document every process our team was using during our one year mandate, so future generations could benefit easier on it. It's powered by Ghost, an open-source CMS project.
