UPDATE Better init flow

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -23,6 +23,10 @@ html(dir='ltr' lang='en' class='no-js')
 
         article.conversation__bubble.conversation__bubble--general.hidden
           p.
+            #html #css #js #php #scss #ror #mysql #json #md #cms #wordpress #ghost #npm #webpack #a11y #performance #animation #svg #generative #opensource #cats #redpandas #lions
+
+        article.conversation__bubble.conversation__bubble--general.hidden
+          p.
             🐦 : #[a(href='https://twitter.com/far0s' target='_blank') tweeting] #[br]
             👨‍💻 : #[a(href='https://github.com/far0s' target='_blank') coding] #[br]
             🔏 : #[a(href='https://medium.com/@Far0s' target='_blank') writing] #[br]
