--- a/src/scss/_casestudy.scss
+++ b/src/scss/_casestudy.scss
@@ -16,6 +16,7 @@
         display: none;
         position: absolute;
         top: 59px;
+        margin: 0 0 16px;
         opacity: 0;
         visibility: hidden;
         pointer-events: none;
