--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -30,7 +30,8 @@ html(dir='ltr' lang='en' class='no-js')
             🐦 : #[a(href='https://twitter.com/far0s' target='_blank') tweeting] #[br]
             👨‍💻 : #[a(href='https://github.com/far0s' target='_blank') coding] #[br]
             🔏 : #[a(href='https://medium.com/@Far0s' target='_blank') writing] #[br]
-            🎨 : #[a(href='https://www.behance.net/sebdancermichel' target='_blank') designing]
+            🎨 : #[a(href='https://www.behance.net/sebdancermichel' target='_blank') designing] #[br]
+            👔 : #[a(href='https://www.linkedin.com/in/sdancermichel/' target='_blank') networking]
 
         article.conversation__bubble.conversation__bubble--general.hidden.previousWorks
           p.
