😎 Updating professional info

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -11,15 +11,15 @@ html(dir='ltr' lang='en' class='no-js')
 
         article.conversation__bubble.conversation__bubble--general.hidden
           p.
-            I’m a #[strong front-end developer], and I focus on creating modern, creative and accessible websites.
+            I'm a #[strong creative web developer intern] at #[a(href='https://yourmajesty.co' target='_blank') Your Majesty] in Amsterdam until the end of November. I'm also part of the #[a(href='junior-entreprises.com' target='_blank') CNJE] as #[strong Chief Information Officer] until July 2019.
 
         article.conversation__bubble.conversation__bubble--general.hidden
           p.
-            I also love to fiddle with #[strong generative design] and learn about anything new in #[strong web development].
+            I focus on creating #[strong modern, creative and accessible] interfaces. I also love to fiddle with #[strong generative design] and learn about anything new in #[strong web development].
 
         article.conversation__bubble.conversation__bubble--general.hidden
           p.
-            I'm looking for a #[strong 6 month internship starting July 2018], if you'd like to know more, feel free to contact me wherever you like on the Web (#[a(href='mailto:s.dancermichel@gmail.com') or by mail]) 🙂
+            I'm looking for a #[strong 1 year study contract starting January 2019 in Paris]. If you'd like to know more, feel free to contact me wherever you like on the Web (#[a(href='mailto:s.dancermichel@gmail.com') or by mail]) 🙂
 
         article.conversation__bubble.conversation__bubble--general.hidden
           p.
