--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -11,7 +11,7 @@ html(dir='ltr' lang='en' class='no-js')
 
         article.conversation__bubble.conversation__bubble--general.hidden
           p.
-            I'm a #[strong creative web developer intern] at #[a(href='https://yourmajesty.co' target='_blank') Your Majesty] in Amsterdam until the end of November. I'm also part of the #[a(href='junior-entreprises.com' target='_blank') CNJE] as #[strong Chief Information Officer] until July 2019.
+            I'm a #[strong creative web developer intern] at #[a(href='https://yourmajesty.co' target='_blank') Your Majesty] in Amsterdam until the end of November. I'm also part of the #[a(href='https://junior-entreprises.com' target='_blank') CNJE] as #[strong Chief Information Officer] until July 2019.
 
         article.conversation__bubble.conversation__bubble--general.hidden
           p.
